k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vouvis-api
spec:
  selector:
    app: vouvis-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
